--- a/src/styles/Accident.module.scss
+++ b/src/styles/Accident.module.scss
@@ -67,13 +67,13 @@
   }
 
   .accidentDropdown {
-    // height: 23px;
     margin-left: 10px;
     margin-top: 20px;
 
     #dropdownselect {
       height: 34px;
       width: 130px;
+      background-color: #f7f7f7;
     }
   }
 
