--- a/src/styles/Investigation.module.scss
+++ b/src/styles/Investigation.module.scss
@@ -1,5 +1,5 @@
 .investigationContainer {
-  height: 252px;
+  // height: 252px;
   // width: 98vw;
   border: 1px solid #c6c4c4;
   border-radius: 6px;
@@ -27,6 +27,7 @@
 .parentdivmap {
   display: flex;
   justify-content: center;
+  margin-bottom: 4px ;
 
   .questions {
     background-color: white;
@@ -55,6 +56,7 @@
     #dropdownselect {
       height: 34px;
       width: 130px;
+      background-color: #f7f7f7
     }
   }
 
