--- a/src/styles/Accident.module.scss
+++ b/src/styles/Accident.module.scss
@@ -33,6 +33,10 @@
   margin-top:20px;
 
   .dateField {
+    #yesIcon{
+      margin: 0px 0px 0px 10px; 
+    }
+
     .date_input_filed {
       height: 34px;
       width: 126px;
@@ -74,11 +78,26 @@
       height: 34px;
       width: 130px;
       background-color: #f7f7f7;
+
     }
+
   }
 
   .accidentComment {
     margin-top: 20px;
     margin-left: 18px;
   }
+}
+
+.selectContainer::after {
+  content: 'X'; /* Cross icon */
+  position: absolute;
+  // right: 5px; /* Adjust as needed */
+  // top: 50%;
+  // transform: translateY(-50%);
+  // pointer-events: none; /* Ensure the cross doesn't interfere with clicking */
+}
+
+.selected::after {
+  display: block; /* Show the cross sign */
 }
