--- a/src/styles/Investigation.module.scss
+++ b/src/styles/Investigation.module.scss
@@ -48,8 +48,9 @@
   }
 
   .investigationDropdown {
+    position: relative;
+    display: inline-block;
     height: 23px;
-    // width: 100vw;
     margin-left: 49px;
     margin-top: 16px;
 
@@ -57,6 +58,13 @@
       height: 34px;
       width: 130px;
       background-color: #f7f7f7
+    }
+    #cancelbtn{
+      position: absolute;
+      right: 21px;
+      top: 11px;
+      border: none;
+      background: none;
     }
   }
 
